gccida/g2/tree_int_cst_lt
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/tree_int_cst_lt/src/tree.c:3910:17: error: expected expression
if ( *( _OWORD *)&t1->block.vars == 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/tree_int_cst_lt/src/tree.c:3910:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&t1->block.vars == 0LL ) 
        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/tree_int_cst_lt/src/obj/tree.o] Error 1
